[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/stage/robot.gd" type="Script" id=1]
[ext_resource path="res://models/robot/hat_male_red.obj" type="ArrayMesh" id=2]
[ext_resource path="res://models/default_material.tres" type="Material" id=3]
[ext_resource path="res://models/robot/hat_male_green.obj" type="ArrayMesh" id=4]
[ext_resource path="res://models/robot/hat_male_blue.obj" type="ArrayMesh" id=5]
[ext_resource path="res://models/robot/hat_male_yellow.obj" type="ArrayMesh" id=6]
[ext_resource path="res://models/robot/hat_female_red.obj" type="ArrayMesh" id=7]
[ext_resource path="res://models/robot/hat_female_green.obj" type="ArrayMesh" id=8]
[ext_resource path="res://models/robot/hat_female_blue.obj" type="ArrayMesh" id=9]
[ext_resource path="res://models/robot/hat_female_yellow.obj" type="ArrayMesh" id=10]
[ext_resource path="res://models/robot/head_male_eyes_left.obj" type="ArrayMesh" id=11]
[ext_resource path="res://models/robot/head_male_eyes_right.obj" type="ArrayMesh" id=12]
[ext_resource path="res://models/robot/head_female_eyes_left.obj" type="ArrayMesh" id=13]
[ext_resource path="res://models/robot/head_female_eyes_right.obj" type="ArrayMesh" id=14]
[ext_resource path="res://models/robot/body_male.obj" type="ArrayMesh" id=15]
[ext_resource path="res://models/robot/body_female.obj" type="ArrayMesh" id=16]
[ext_resource path="res://models/robot/hand.obj" type="ArrayMesh" id=17]
[ext_resource path="res://models/robot/foot.obj" type="ArrayMesh" id=18]

[sub_resource type="Animation" id=1]
resource_name = "idling"
tracks/0/type = "value"
tracks/0/path = NodePath("MainAxis/Hat:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.7297, 0 ), Vector3( 0, 1.7897, 0 ), Vector3( 0, 1.7297, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainAxis/Head:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.12304, 0 ), Vector3( 0, 1.19304, 0 ), Vector3( 0, 1.12304, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainAxis/Body:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.450364, 0 ), Vector3( 0, 0.510364, 0 ), Vector3( 0, 0.450364, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainAxis/RightHandAxis/RightHand:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.406713, 0.433306, 0 ), Vector3( -0.406713, 0.453306, 0 ), Vector3( -0.406713, 0.433306, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainAxis/LeftHandAxis/LeftHand:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.406687, 0.433306, 0 ), Vector3( 0.406687, 0.453306, 0 ), Vector3( 0.406687, 0.433306, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "turn_left"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainAxis/Hat:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.7297, 0 ), Vector3( 0, 1.7297, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainAxis/Hat:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainAxis/Head:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.12304, 0 ), Vector3( 0, 1.12304, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainAxis/Head:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainAxis/Body:translation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.450364, 0 ), Vector3( 0, 0.450364, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainAxis/Body:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainAxis/RightHandAxis:rotation_degrees")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainAxis/RightHandAxis/RightHand:translation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.406713, 0.433306, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MainAxis/LeftHandAxis:rotation_degrees")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.15, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MainAxis/LeftHandAxis/LeftHand:translation")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.406687, 0.433306, 0 ), Vector3( 0.406687, 0.433306, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MainAxis/RightFootAxis:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("MainAxis/RightFootAxis/RightFoot:translation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.133349, 0.0669497, 0 ), Vector3( -0.133349, 0.12695, 0 ), Vector3( -0.133349, 0.0669497, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("MainAxis/LeftFootAxis:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("MainAxis/LeftFootAxis/LeftFoot:translation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.133387, 0.0669497, 0 ), Vector3( 0.133387, 0.12695, 0 ), Vector3( 0.133387, 0.0669497, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn_right"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainAxis/Hat:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.7297, 0 ), Vector3( 0, 1.7297, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainAxis/Hat:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainAxis/Head:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.12304, 0 ), Vector3( 0, 1.12304, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainAxis/Head:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainAxis/Body:translation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.450364, 0 ), Vector3( 0, 0.450364, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainAxis/Body:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainAxis/RightHandAxis:rotation_degrees")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainAxis/RightHandAxis/RightHand:translation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.406713, 0.433306, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MainAxis/LeftHandAxis:rotation_degrees")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.15, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MainAxis/LeftHandAxis/LeftHand:translation")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.406687, 0.433306, 0 ), Vector3( 0.406687, 0.433306, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MainAxis/RightFootAxis:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("MainAxis/RightFootAxis/RightFoot:translation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.133349, 0.0669497, 0 ), Vector3( -0.133349, 0.12695, 0 ), Vector3( -0.133349, 0.0669497, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("MainAxis/LeftFootAxis:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("MainAxis/LeftFootAxis/LeftFoot:translation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.133387, 0.0669497, 0 ), Vector3( 0.133387, 0.12695, 0 ), Vector3( 0.133387, 0.0669497, 0 ) ]
}

[sub_resource type="Animation" id=4]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainAxis/LeftFootAxis/LeftFoot/foot:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.18 ), Vector3( 0, 0.07, 0.09 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainAxis/RightFootAxis/RightFoot/foot:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -0.18 ), Vector3( 0, 0.07, -0.09 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainAxis/RightHandAxis/RightHand/hand:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.18 ), Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainAxis/LeftHandAxis/LeftHand/hand:translation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -0.18 ), Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainAxis/Hat:translation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.7297, 0 ), Vector3( 0, 1.7997, 0 ), Vector3( 0, 1.7297, 0 ), Vector3( 0, 1.7997, 0 ), Vector3( 0, 1.7297, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainAxis/Head:translation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.12304, 0 ), Vector3( 0, 1.19304, 0 ), Vector3( 0, 1.12304, 0 ), Vector3( 0, 1.19304, 0 ), Vector3( 0, 1.12304, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainAxis/Body:translation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.450364, 0 ), Vector3( 0, 0.520364, 0 ), Vector3( 0, 0.450364, 0 ), Vector3( 0, 0.520364, 0 ), Vector3( 0, 0.450364, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainAxis:translation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.00280541, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 1 ) ]
}

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.498767, 0.955294, 0.517511 )

[node name="Robot" type="Area"]
editor/display_folded = true
input_ray_pickable = true
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idling = SubResource( 1 )
anims/turn_left = SubResource( 2 )
anims/turn_right = SubResource( 3 )
anims/walking = SubResource( 4 )

[node name="MainAxis" type="Spatial" parent="."]

[node name="Hat" type="Spatial" parent="MainAxis"]
editor/display_folded = true
transform = Transform( 0.999992, 0, -0.00390646, 0, 1, 0, 0.00390646, 0, 0.999992, 0, 1.7297, 0 )

[node name="hat_male_red" type="MeshInstance" parent="MainAxis/Hat"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="hat_male_green" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 4 )
material/0 = ExtResource( 3 )

[node name="hat_male_blue" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 5 )
material/0 = ExtResource( 3 )

[node name="hat_male_yellow" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 6 )
material/0 = ExtResource( 3 )

[node name="hat_female_red" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 7 )
material/0 = ExtResource( 3 )

[node name="hat_female_green" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 8 )
material/0 = ExtResource( 3 )

[node name="hat_female_blue" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 9 )
material/0 = ExtResource( 3 )

[node name="hat_female_yellow" type="MeshInstance" parent="MainAxis/Hat"]
visible = false
mesh = ExtResource( 10 )
material/0 = ExtResource( 3 )

[node name="Head" type="Spatial" parent="MainAxis"]
transform = Transform( 0.999993, 0, -0.00368648, 0, 1, 0, 0.00368648, 0, 0.999993, 0, 1.12304, 0 )

[node name="head_male_eyes_left" type="MeshInstance" parent="MainAxis/Head"]
mesh = ExtResource( 11 )
material/0 = ExtResource( 3 )

[node name="head_male_eyes_right" type="MeshInstance" parent="MainAxis/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.76837e-007, 0 )
visible = false
mesh = ExtResource( 12 )
material/0 = ExtResource( 3 )

[node name="head_female_eyes_left" type="MeshInstance" parent="MainAxis/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.76837e-007, 0 )
visible = false
mesh = ExtResource( 13 )
material/0 = ExtResource( 3 )

[node name="head_female_eyes_right" type="MeshInstance" parent="MainAxis/Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.76837e-007, 0 )
visible = false
mesh = ExtResource( 14 )
material/0 = ExtResource( 3 )

[node name="Body" type="Spatial" parent="MainAxis"]
editor/display_folded = true
transform = Transform( 0.999902, 0, -0.0140032, 0, 1, 0, 0.0140032, 0, 0.999902, 0, 0.450364, 0 )

[node name="body_male" type="MeshInstance" parent="MainAxis/Body"]
mesh = ExtResource( 15 )
material/0 = ExtResource( 3 )

[node name="body_female" type="MeshInstance" parent="MainAxis/Body"]
visible = false
mesh = ExtResource( 16 )
material/0 = ExtResource( 3 )

[node name="RightHandAxis" type="Spatial" parent="MainAxis"]
editor/display_folded = true

[node name="RightHand" type="Spatial" parent="MainAxis/RightHandAxis"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.406713, 0.433306, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="hand" type="MeshInstance" parent="MainAxis/RightHandAxis/RightHand"]
mesh = ExtResource( 17 )
material/0 = ExtResource( 3 )

[node name="LeftHandAxis" type="Spatial" parent="MainAxis"]
editor/display_folded = true
transform = Transform( 0.999907, 0, -0.0136324, 0, 1, 0, 0.0136324, 0, 0.999907, 0, 0, 0 )

[node name="LeftHand" type="Spatial" parent="MainAxis/LeftHandAxis"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.406687, 0.433306, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="hand" type="MeshInstance" parent="MainAxis/LeftHandAxis/LeftHand"]
mesh = ExtResource( 17 )
material/0 = ExtResource( 3 )

[node name="RightFootAxis" type="Spatial" parent="MainAxis"]
editor/display_folded = true

[node name="RightFoot" type="Spatial" parent="MainAxis/RightFootAxis"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.133349, 0.0669497, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="foot" type="MeshInstance" parent="MainAxis/RightFootAxis/RightFoot"]
mesh = ExtResource( 18 )
material/0 = ExtResource( 3 )

[node name="LeftFootAxis" type="Spatial" parent="MainAxis"]
editor/display_folded = true

[node name="LeftFoot" type="Spatial" parent="MainAxis/LeftFootAxis"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.133387, 0.0692831, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="foot" type="MeshInstance" parent="MainAxis/LeftFootAxis/LeftFoot"]
mesh = ExtResource( 18 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.963347, 0 )
shape = SubResource( 5 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
